Bug 438406 - qBittorrent icon name is wrong in Overview Window
Summary: qBittorrent icon name is wrong in Overview Window
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_autostart (other bugs)
Version First Reported In: 5.22.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Nicolas Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-10 12:16 UTC by Nowshed H. Imran
Modified: 2021-07-03 13:10 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.1
Sentry Crash Report:


Attachments
Error in photo (73.74 KB, image/png)
2021-06-10 12:16 UTC, Nowshed H. Imran
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nowshed H. Imran 2021-06-10 12:16:39 UTC
Created attachment 139190 [details]
Error in photo

SUMMARY
This app correctly shows the name processes window but not in the Overview window. Ksysguard also shows it correctly.

STEPS TO REPRODUCE
1. Install qBittorrent
2. Run the application
3. Open Plasma System Monitor

OBSERVED RESULT
Icon name is shown as org.qbittorrent.qbittorrent. 

EXPECTED RESULT
It should be only qbittorrent with icon.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.22.0
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Kernel Version: 5.12.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 3.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520

ADDITIONAL INFORMATION
Comment 1 David Redondo 2021-06-10 12:57:17 UTC
Hmm cannot reproduce, how did you install the qbittorent?
What's the output of 'systemd-cgls | grep qbittorrent'?
Comment 2 Nowshed H. Imran 2021-06-10 13:27:42 UTC
❯ systemd-cgls | grep qbittorrent
│   │ │ ├─app-org.qbittorrent.qbittorrent@autostart.service 
│   │ │ │ └─812 /usr/bin/qbittorrent
Comment 3 David Redondo 2021-06-10 13:51:28 UTC
How is the .desktop file of qbittorrent called on my system it's 
org.qbittorrent.qBittorrent.desktop
Comment 4 Nowshed H. Imran 2021-06-10 14:04:21 UTC
My Desktop file name is also the same but I have added qBittorrent in Start and Shutdown > Autostart.

Can it be the reason?
Comment 5 David Redondo 2021-06-10 14:07:00 UTC
The reason that there's no icon is because the desktop file is called

org.qbittorrent.qBittorrent.desktop

while the autostart cgroup is called 

app-org.qbittorrent.qbittorrent@autostart.service

note the diference between upper and lower case 'b' in both names.

How did you add it to autostart, through system settings?
Comment 6 Nowshed H. Imran 2021-06-10 14:21:49 UTC
Yes I get that.

The thing is neither I nor qBittorrent has generated the file:

app-org.qbittorrent.qbittorrent@autostart.service

It was done by KDE Systemsettings Autostart KCM.
Comment 7 Nowshed H. Imran 2021-06-10 14:30:41 UTC
I have removed QB from autostart, restarted the PC, and started the app manually. This is the result.

❯ systemd-cgls | grep qbittorrent
│   │ │ ├─app-org.qbittorrent.qBittorrent-a79bbecaeefe40e2bfa878e830e0be9b.scope 
│   │ │ │ └─924 /usr/bin/qbittorrent
Comment 8 Nowshed H. Imran 2021-06-10 14:31:25 UTC
Plasma System Monitor also reposting the icon name and icon correctly.
Comment 9 Bug Janitor Service 2021-06-10 14:57:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/923
Comment 10 Nicolas Fella 2021-06-10 19:08:38 UTC
Git commit 906223bd2781dd0ac27fc4ce27c432b073e67900 by Nicolas Fella.
Committed on 10/06/2021 at 19:08.
Pushed by nicolasfella into branch 'master'.

[kcms/autostart] Keep capitalization of desktop file names

desktopEntry() is always lowercase. Use storageId() to get the original
file name.

M  +1    -1    kcms/autostart/autostartmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/906223bd2781dd0ac27fc4ce27c432b073e67900
Comment 11 Nicolas Fella 2021-06-10 19:09:53 UTC
Git commit 3080b2801cea3437772b2a68e07866f18618d538 by Nicolas Fella.
Committed on 10/06/2021 at 19:09.
Pushed by nicolasfella into branch 'Plasma/5.22'.

[kcms/autostart] Keep capitalization of desktop file names

desktopEntry() is always lowercase. Use storageId() to get the original
file name.
(cherry picked from commit 906223bd2781dd0ac27fc4ce27c432b073e67900)

M  +1    -1    kcms/autostart/autostartmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/3080b2801cea3437772b2a68e07866f18618d538
Comment 12 Nowshed H. Imran 2021-06-10 19:20:51 UTC
Just WOW!

I had no idea this error would be solved so soon.
Great Job! Love and Respect!
Comment 13 Nate Graham 2021-06-12 04:58:57 UTC
:)
Comment 14 Nowshed H. Imran 2021-06-17 18:07:43 UTC
Sorry, to say the bug remains in Plasma 5.22.1.

systemd-cgls | grep qbittorrent
│   │ │ ├─app-org.qbittorrent.qbittorrent@autostart.service 
│   │ │ │ └─810 /usr/bin/qbittorrent


Operating System: Arch Linux
KDE Plasma Version: 5.22.1
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Kernel Version: 5.12.11-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 3.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520
Comment 15 Nowshed H. Imran 2021-07-02 14:02:28 UTC
(In reply to Nate Graham from comment #13)
> :)

Hey nate, the bug is apparently not fixed in Plasma 5.22.2
Comment 16 David Edmundson 2021-07-02 22:23:42 UTC
And it appears as org.qbittorrent.qbittorrent still?

Can you confirm that there is a file with a matching name: /usr/share/applications/org.qbittorrent.qbittorrent.desktop
Comment 17 Nowshed H. Imran 2021-07-03 05:20:35 UTC
(In reply to David Edmundson from comment #16)
> And it appears as org.qbittorrent.qbittorrent still?
> 
> Can you confirm that there is a file with a matching name:
> /usr/share/applications/org.qbittorrent.qbittorrent.desktop

No. It is,
 
/usr/share/applications/org.qbittorrent.qBittorrent.desktop
systemd-cgls | grep qbittorrent
│   │ │ ├─app-org.qbittorrent.qbittorrent@autostart.service 
│   │ │ │ └─814 /usr/bin/qbittorrent


But, I am at a loss here. Bleachbit has a similar desktop file name, but it starts correctly.

/usr/share/applications/org.bleachbit.BleachBit.desktop

 systemd-cgls | grep bleachbit
│   │ │ ├─app-org.bleachbit.BleachBit@autostart.service 
│   │ │ │ └─812 /usr/bin/python3 /usr/bin/bleachbit
Comment 18 Nicolas Fella 2021-07-03 12:14:30 UTC
My patch does not change existing autostart entries, it only applies to new ones. Did you remove and re-add the autostart entry?
Comment 19 Nowshed H. Imran 2021-07-03 13:10:47 UTC
(In reply to Nicolas Fella from comment #18)
> My patch does not change existing autostart entries, it only applies to new
> ones. Did you remove and re-add the autostart entry?

No, it did not. Re-adding solved my problem. Thanks!