[kcms/autostart] Keep capitalization of desktop file names

desktopEntry() is always lowercase. Use storageId() to get the original
file name.

BUG: 438406